Sun Mar 17 21:34:06 GMT 2013  Olly Betts <olly@survex.com>

	* htmlparsetest.cc: Update testcase to match previous change.

Sun Mar 17 21:13:49 GMT 2013  Olly Betts <olly@survex.com>

	* myhtmlparse.cc: Make paragraph break in sample \r not \n, as \n
	  is used by Omega to indicate the end of a field in the document
	  data.

Fri Mar 15 03:48:50 GMT 2013  Olly Betts <olly@survex.com>

	* md5wrap.cc,md5wrap.h: Add md5_block() to checksum a block of memory.

Thu Mar 07 00:40:20 GMT 2013  Olly Betts <olly@survex.com>

	* jsonescape.cc: Fix C+11 compatibility issue highlighted by GCC
	  warning.

Wed Mar 06 03:35:43 GMT 2013  Olly Betts <olly@survex.com>

	* gen-myhtmltags,myhtmlparse.cc: Distinguish page breaks from other
	  whitespace in samples.

Tue Mar 05 19:37:55 GMT 2013  Olly Betts <olly@survex.com>

	* INSTALL,configure.ac: Provide hints as to what package to install
	  for magic.h.

Mon Mar 04 03:56:22 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,omindex.cc,runfilter.cc,runfilter.h: If omindex
	  receives a SIGHUP, SIGINT, SIGQUIT or SIGTERM, then kill any active
	  external filter child process before handling the signal as we
	  otherwise would.

Sun Mar 03 23:52:37 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,runfilter.cc: If setpgid() is available, put each
	  external filter in its own process group so we can easily kill it
	  along with any processes which it starts.

Mon Feb 25 19:03:06 GMT 2013  Olly Betts <olly@survex.com>

	* docs/overview.rst: Update to add com to the list of ignored
	  extensions.

Thu Feb 21 22:09:44 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Ignore .com files by default.

Tue Feb 19 04:19:50 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Feb 19 03:13:08 GMT 2013  Olly Betts <olly@survex.com>

	* htmlparsetest.cc,myhtmlparse.cc,myhtmlparse.h: Sample from HTML now
	  contains \n where a line or paragraph break would appear, and \t
	  between table cells.
